[package]
name = "spikenaut-fpga-supervisor"
version = "0.1.0"
edition = "2024"
description = "Live Hardware Supervisor for Spikenaut: Orchestrates GPU telemetry, FPGA brain pulses, and emergency brakes."
license = "GPL-3.0-only"

[dependencies]
# Core Logic
anyhow = "1"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
chrono = "0.4"
clap = { version = "4.2.4", features = ["derive", "env"] }
lazy_static = "1.4"
regex = "1"

# Hardware Interfaces
nvml-wrapper = "0.10"
serialport = "4.3"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8"
rayon = "1.7.0"

# External Spikenaut Libs
spikenaut-fpga = { path = "../spikenaut-fpga" }

[[bin]]
name = "spikenaut-supervisor"
path = "src/main.rs"
