[package]
name = "thalamic-relay"
version = "0.1.0"
edition = "2024"
description = "Lightweight CLI relay that observes telemetry and forwards normalized stimuli to FPGA/network backends."
license = "GPL-3.0-only"

[dependencies]
# Core Logic
anyhow = "1"
neuromod = "0.4.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
chrono = "0.4"
clap = { version = "4.2.4", features = ["derive", "env"] }
lazy_static = "1.4"
regex = "1"

# Hardware Interfaces
nvml-wrapper = "0.10"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8"
rayon = "1.7.0"

# Core Backend Crates
silicon-bridge = { path = "../silicon-bridge", features = ["uart"] }
plasticity-lab = { package = "plascticity-lab", path = "../plasticity-lab" }
metabolic-ledger = { path = "../metabolic-ledger" }
limbic-critic = { path = "../limbic-critic", optional = true }

[[bin]]
name = "thalamic-relay"
path = "src/main.rs"

[workspace]
